--- a/style.css
+++ b/style.css
@@ -352,5 +352,5 @@ th {
 }
 
 table .active {
-  background-color: rgba(23, 135, 204, 0.445);
+  background-image: linear-gradient(90deg, rgba(131,58,180,0.35) 0%, rgba(253,29,29,0.35) 50%, rgba(252,176,69,0.35) 100%);
 }
