--- a/style.css
+++ b/style.css
@@ -90,111 +90,129 @@ body{
 /* New Song */
 #newSongSection {
   position: fixed;
-  top: 5%;
-  left: 12.5%;
-  width: 75%;
-  height: 90%;
-
-  background-color: rgb(60, 79, 60);
-  border: 2px solid grey;
-}
-
-#newSongSection #newSongTitle{
+  top: 0;
+  left: 0;
   width: 100%;
-  text-align: center;
-  font-size: 1.8em;
-  color: rgb(232, 229, 229);
-  background-color: black;
+  height: 100%;
+  background-color: #0000007d;
 }
 
-#newSongSection div h3 {
+#newSongPopup {
+  position: relative;
+  top: 15vh;
+  left: 10vw;
+  width: 80vw;
+  height: 70vh;
+
+  border: 1px solid #afafaf;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.529);
+  background-color: #40493b;
+  overflow-y: scroll;
+}
+
+#newSongTitle {
+  padding: 10px 0;
+  width: 100%;
+  background-color: #000000a0;
+  background-image: linear-gradient(90deg, rgba(131,58,180,0.35) 0%, rgba(253,29,29,0.35) 50%, rgba(252,176,69,0.35) 100%);
+  border-bottom: 2px solid #afafaf;
+}
+
+#newSongTitle h3 {
   margin: 0;
-  padding: 20px;
-}
-
-form {
-  margin-top: 50px;
-  padding: 40px;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-}
-
-#inputContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  color: #40493b;
+  font-size: 2em;
+  text-align: center;
+  -webkit-text-stroke: 0.55px rgba(255, 255, 255, 0.88);
+  text-shadow: 1px 1px 20px rgba(255, 255, 255, 0.4);
 }
 
 form div {
-  margin-bottom: 60px;
-}
-
-form input, form textarea {
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 10px;
-  padding: 5px;
-  width: 100%;
-  border: 0.5px solid black;
-  box-shadow: 2px 2px 10px rgb(37, 43, 37);
-  font-size: 1.4em;
-  resize: none;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
 form label {
-  color: #e9e9e9;
+  margin: 2% auto;
+  width: 71%;
+  font-size: 1.3em;
+  color: #b4b4b4;
+}
+
+form input, textarea {
+  margin: 0 auto 2%;
+  padding: 5px;
+  width: 70%;
+  font-size: 1.25em;
+  background-color: #dfdfdf;
+  border: 1.5px dashed rgb(78, 78, 78);
+  border-radius: 5px;
+}
+
+form textarea {
   font-size: 1.5em;
+  resize: none;
 }
 
-#audioFileInputLabel {
-  padding: 10px;
+form #inputContainer {
+  flex-direction: row;
+}
+
+form #inputContainer label, button {
+  margin: 5% 0;
+  padding: 20px;
+  width: 20%;
   height: fit-content;
-  width: 100px;
+
+  font-size: large;
   text-align: center;
-  background-color: rgb(51, 127, 221);
 }
 
-#audioFileInputLabel:hover {
-  background-color: rgb(24, 88, 167);
+form #inputContainer label {
+  background-color: rgb(108, 47, 148);
 }
 
-#audioFileInputLabel:active {
-  background-color: rgb(19, 70, 133);
+form #inputContainer label:hover {
+  background-color: rgb(78, 34, 107);
 }
 
-#audioFileInputCounter {
+form #inputContainer label:active {
+  background-color: rgb(48, 21, 66);
+}
+
+
+form #inputContainer button:nth-last-child(2) {
+  background-color: rgb(253,29,29);
+}
+
+form #inputContainer button:nth-last-child(2):hover {
+  background-color: rgb(180, 24, 24);
+}
+
+form #inputContainer button:nth-last-child(2):active {
+  background-color: rgb(121, 16, 16);
+}
+
+
+form #inputContainer button:nth-last-child(1) {
+  background-color: rgb(219, 152, 58); 
+}
+
+form #inputContainer button:nth-last-child(1):hover {
+  background-color: rgb(167, 116, 44); 
+}
+
+form #inputContainer button:nth-last-child(1):active {
+  background-color: rgb(92, 64, 25); 
+}
+
+
+form #audioFileInputCounter {
+  margin: 1% auto;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.2em;
   color: white;
-}
-
-form button {
-  font-size: 1.15em;
-  width: 115px;
-  height: 57.5px;
-}
-
-form button:nth-child(4) {
-  background-color: rgb(31, 162, 90);
-}
-
-form button:nth-child(4):hover {
-  background-color: rgb(16, 123, 64);
-}
-
-form button:nth-child(4):active {
-  background-color: rgb(14, 99, 52);
-}
-
-form button:nth-child(5) {
-  background-color: rgb(187, 35, 35);
-}
-
-form button:nth-child(5):hover {
-  background-color: rgb(135, 26, 26);
-}
-
-form button:nth-child(5):active {
-  background-color: rgb(106, 21, 21);
 }
 
 
