--- a/style.css
+++ b/style.css
@@ -249,7 +249,6 @@ form #audioFileInputCounter {
 #playDiv h5 {
   margin: 15px 10%;
   color: #e9e9e9;
-  /* text-align: center; */
   font-size: 1.5em;
 }
 
@@ -307,26 +306,26 @@ form #audioFileInputCounter {
 
 
 
-/* Request Information Section */
-#requestInfoSection {
-  margin: 100px 0;
+/* Soundboard Section */
+#soundboardSection {
   display: flex;
-  justify-content: space-around;
-  color: rgb(225, 225, 225);
-  font-size: 1.3em;
+  justify-content: space-evenly;
+  margin-top: 5%;
+  padding: 2% 0;
+  width: 100%;
+  background-color: #272727;
+  box-shadow: 0 0 10px 10px #272727;
 }
 
-#requestInfoSection div:nth-child(1) {
-  width: 30%;
+#soundboardSection div {
+  padding: 2px;
+  width: 5%;
+  background-color: #00000086;
 }
 
-#requestInfoSection div:nth-child(2) {
-  width: 50%;
-}
-
-#requestInfoSection h4 {
-  color: white;
-  font-size: 1.5em;
+#soundboardSection div img {
+  width: 100%;
+  height: 100%;
 }
 
 
